fix: tap and drag on range to work on safari(iOS)

--- a/webui-page/webui.css
+++ b/webui-page/webui.css
@@ -1,6 +1,7 @@
 :root {
   --main-bg-color: #000000;
   --main-fg-color: #a0a0a0;
+  --slider-height: 85px;
 }
 
 body {
@@ -161,7 +162,7 @@ input[type="range"] {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 85px;
+  height: var(--slider-height);
   cursor: pointer;
   border-radius: 6px;
   /*background: var(--main-fg-color);*/
@@ -171,7 +172,7 @@ input[type="range"] {
 
 ::-webkit-slider-runnable-track {
   background: var(--main-bg-color);
-  height: 85px;
+  height: var(--slider-height);
 }
 
 ::-webkit-slider-container {
@@ -183,9 +184,9 @@ input[type="range"] {
  */
 ::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 1; /* 1 */
-  height: 85px;
-  background: #999;
+  width: 1px; /* 1 */
+  height: var(--slider-height);
+  background: var(--main-fg-color);
   box-shadow: -100vw 0 0 100vw var(--main-fg-color);
   border: 0 solid #999; /* 1 */
 }
@@ -201,7 +202,7 @@ input[type="range"] {
 }
 
 ::-moz-range-track {
-  height: 85px;
+  height: var(--slider-height);
   background: var(--main-bg-color);
 }
 
@@ -212,7 +213,7 @@ input[type="range"] {
 ::-ms-thumb {
   background: #fff;
   border: 2px solid #999;
-  height: 40px;
+  height: var(--slider-height);
   width: 20px;
   box-sizing: border-box;
 }
@@ -228,7 +229,7 @@ input[type="range"] {
 ::-ms-track {
   background: #ddd;
   color: transparent;
-  height: 85px;
+  height: var(--slider-height);
   border: none;
 }
 
